# ybc-contracts

./: .gitignore  Cargo.toml  MASTER PLAN.md  README.md
amm/: Cargo.toml
amm/src/: contract.rs  lib.rs  storage.rs  test.rs
amm/test_snapshots/test/: test_deposit_adjusts_to_pool_ratio.1.json  test_deposit_fails_below_minimum.1.json  test_deposit_fails_with_zero_amount.1.json  test_deposit_maintains_ratio.1.json  test_first_deposit.1.json  test_initialization.1.json  test_initialization_wrong_order.1.json  test_large_deposit_small_deposit_fairness.1.json  test_multiple_liquidity_providers.1.json  test_price_impact.2.json  test_swap_a_for_b.1.json  test_swap_b_for_a.1.json  test_swap_both_directions_maintains_balance.1.json  test_swap_fails_insufficient_liquidity.1.json  test_swap_fails_slippage_protection.1.json  test_swap_respects_fee.1.json  test_withdraw_after_profitable_swaps.1.json  test_withdraw_fails_insufficient_shares.1.json  test_withdraw_full_liquidity.1.json  test_withdraw_partial_liquidity.1.json
contracts/factory/: Cargo.toml
contracts/factory/src/: storage.rs
contracts/mocks/mock_vault/: Cargo.toml
contracts/mocks/mock_vault/src/: lib.rs
contracts/tokens/principal_token/: Cargo.toml
contracts/tokens/principal_token/src/: lib.rs  storage.rs
contracts/tokens/principal_token_interface/: Cargo.toml
contracts/tokens/yield_token/: Cargo.toml
contracts/tokens/yield_token_interface/: Cargo.toml
contracts/yield/yield_manager/: Cargo.toml
contracts/yield/yield_manager/src/: contract.rs  lib.rs  storage.rs  test.rs
core/factory/src/: contract.rs  lib.rs
core/tokens/yield_token/: Cargo.toml
core/tokens/yield_token/src/: contract.rs  test.rs
core/tokens/yield_token/test_snapshots/test/: test_burn_accrues_yield_before_burning.1.json  test_initialization.1.json  test_mint_sets_initial_index.1.json  test_mint_to_existing_user_preserves_high_water_mark.1.json  test_multiple_claims_accumulate_yield.1.json  test_no_yield_if_rate_unchanged.1.json  test_proportional_yield_distribution.1.json  test_transfer_accrues_yield_for_both_parties.1.json  test_transfer_to_existing_user_preserves_index.1.json  test_user_index_updates_after_accrual.1.json  test_yield_accrues_when_exchange_rate_increases.1.json
core/yield/yield_manager/: Cargo.toml
core/yield/yield_manager_interface/: Cargo.toml
vault/: README.md
vault/defindex_interface/: Cargo.toml
vault/defindex_interface/src/: lib.rs
vault/vault_interface/: Cargo.toml
vault/vault_interface/src/: lib.rs
wasms/: hold_strategy.wasm  vault.wasm
(+27 files in other folders)
