[package]
name = "yield_manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["contract"]
contract = []

[dependencies]
principal_token = { path = "../../tokens/principal_token", default-features = false }
soroban-sdk = { workspace = true }
vault_interface = { path = "../../../vault/vault_interface" }
yield_manager_interface = { path = "../yield_manager_interface" }
yield_token = { path = "../../tokens/yield_token", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
mock_vault = { path = "../../mocks/mock_vault" }
principal_token = { path = "../../tokens/principal_token" }
yield_token = { path = "../../tokens/yield_token" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
