[package]
name = "yield_token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["contract"]
contract = []

[dependencies]
soroban-sdk = { workspace = true }
vault_interface = { path = "../../../vault/vault_interface" }
yield_manager_interface = { path = "../../yield/yield_manager_interface" }
mock_vault = {path = "../../mocks/mock_vault" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
principal_token = { path = "../principal_token" }
yield_manager = { path = "../../yield/yield_manager" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
